infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: dash007/ticketing-client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client 
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
# first spec describes how this deployment have to behave
# template defines how every pod created by this deployment should behave.   app: client = how this deployment should find set of pod to manage
# second metadata spec how every pod should behave
# app: client in service is how service is supposed to find pod 
# port 3000 because next.js by default listens on port 3000
