infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
---
apiVersion: v1   # cluster ip service to connect the pod that this deployment creates
kind: Service
metadata:
  name: orders-mongo-srv # this is a database name can be connected from dep files with 
spec:
  selector:
    app: orders-mongo  # selector: app:  is gonna tell to which pod wants to get excess to. so find a pod with label orders-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
