infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo
---
apiVersion: v1   # cluster ip service to connect the pod that this deployment creates
kind: Service
metadata:
  name: tickets-mongo-srv # this is a database name can be connected from dep files with 
spec:
  selector:
    app: tickets-mongo  # selector: app:  is gonna tell to which pod wants to get excess to. so find a pod with label tickets-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
