infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000 
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tickets-srv 
                port:
                  number: 3000      
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-srv 
                port:
                  number: 3000                
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000        
# anytime someone or 'us with postman for testing' makes request to cluster pod. request has path /api/users/?(.*)  ?(.*)  = any. then we ar gonna send request back to 3000
# auth-srv is from auth-depl.yaml file service name
# ingress engin x = incoming requests from outside of cluster 
# array of different paths - row 20 --> path: /?(.*) means capture every incoming path. its important to be at the end so that if there is no any match above it will catch it
